--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -6,30 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".Profil">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/start_seite_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ToolbarColoredBackArrow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@android:color/white">
+    <include layout="@layout/toolbar_3" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:background="@android:color/transparent"
-            android:onClick="toHilfe"
-            android:text="Hilfe"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white"
-            tools:layout_editor_absoluteX="82dp"
-            tools:layout_editor_absoluteY="4dp" />
-    </androidx.appcompat.widget.Toolbar>
+    <include
+        android:id="@+id/include19"
+        layout="@layout/toolbar_2" />
 
     <LinearLayout
         android:id="@+id/linear1"
@@ -40,7 +21,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView47"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_seite_toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/include19">
 
         <LinearLayout
             android:layout_width="match_parent"
