--- a/app/src/main/res/layout/activity_ubungen_4.xml
+++ b/app/src/main/res/layout/activity_ubungen_4.xml
@@ -5,185 +5,91 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/start_seite_toolbar4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
-        android:minHeight="?attr/actionBarSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
-        app:theme="@style/ToolbarColoredBackArrow"
-        app:titleTextColor="@android:color/white">
+    <include layout="@layout/toolbar_1" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:background="@android:color/transparent"
-            android:onClick="toHilfe"
-            android:text="Hilfe"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white"
-            tools:layout_editor_absoluteX="82dp"
-            tools:layout_editor_absoluteY="4dp" />
-
-        <TextView
-            android:id="@+id/textView31"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="|"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="320dp"
-            tools:layout_editor_absoluteY="18dp" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:background="@android:color/transparent"
-            android:onClick="toProfil"
-            android:text="Profil"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white"
-            tools:layout_editor_absoluteX="82dp"
-            tools:layout_editor_absoluteY="4dp" />
-    </androidx.appcompat.widget.Toolbar>
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_notfallkontakt" />
-
-    <TextView
-        android:id="@+id/textView71"
-        android:layout_width="229dp"
-        android:layout_height="43dp"
-        android:layout_marginEnd="76dp"
-        android:layout_marginBottom="4dp"
-        android:text="Übungen"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
-        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/toolbar" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_back_arrow_black_2" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
-        app:layout_constraintStart_toEndOf="@+id/textView71"
-        app:layout_constraintTop_toTopOf="@+id/textView71"
-        app:srcCompat="@mipmap/ic_refresh_button_black" />
-
-    <TextView
-        android:id="@+id/textView73"
-        android:layout_width="335dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="12dp"
-        android:text="Übung 1"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/checkBox13"
-        app:layout_constraintTop_toBottomOf="@+id/start_seite_toolbar4" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="54dp"
-        android:layout_height="37dp"
-        app:layout_constraintBottom_toBottomOf="@+id/start_seite_toolbar4"
-        app:layout_constraintEnd_toEndOf="@+id/start_seite_toolbar4"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/start_seite_toolbar4"
-        app:layout_constraintTop_toTopOf="@+id/start_seite_toolbar4"
-        app:layout_constraintVertical_bias="0.631"
-        app:srcCompat="@drawable/ic_menu_button" />
-
-    <CheckBox
-        android:id="@+id/checkBox13"
-        android:layout_width="30dp"
-        android:layout_height="43dp"
-        android:textSize="96sp"
-        app:layout_constraintTop_toTopOf="@+id/textView73"
-        tools:layout_editor_absoluteX="40dp" />
+    <include
+        android:id="@+id/include13"
+        layout="@layout/toolbar_2" />
 
     <EditText
         android:id="@+id/editTextTextMultiLine2"
         android:layout_width="344dp"
         android:layout_height="340dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="215dp" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
 
     <androidx.constraintlayout.widget.Barrier
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="top" />
 
-    <Button
-        android:id="@+id/button19"
-        android:layout_width="168dp"
-        android:layout_height="58dp"
-        android:text="Übung abbrechen"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="618dp" />
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="28dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include13">
 
-    <Button
-        android:id="@+id/button20"
-        android:layout_width="168dp"
-        android:layout_height="58dp"
-        android:text="Weiter"
-        tools:layout_editor_absoluteX="208dp"
-        tools:layout_editor_absoluteY="618dp" />
+        <CheckBox
+            android:id="@+id/checkBox13"
+            android:layout_width="30dp"
+            android:layout_height="43dp"
+            android:layout_gravity="left"
+            android:layout_marginRight="30dp"
+            android:textSize="96sp" />
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_question_mark_black"
-        tools:layout_editor_absoluteX="327dp"
-        tools:layout_editor_absoluteY="123dp" />
+        <TextView
+            android:id="@+id/textView73"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:text="Übung 1"
+            android:textAlignment="gravity"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginLeft="30dp"
+            app:srcCompat="@mipmap/ic_question_mark_black" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="86dp"
+        android:layout_marginTop="64dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2"
+        tools:layout_editor_absoluteX="2dp">
+
+        <Button
+            android:id="@+id/button20"
+            android:layout_width="168dp"
+            android:layout_height="58dp"
+            android:text="Weiter" />
+
+        <Button
+            android:id="@+id/button19"
+            android:layout_width="168dp"
+            android:layout_height="58dp"
+            android:text="Übung abbrechen" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
