Popup menu extended to BaseActivity

--- a/app/src/main/res/layout/activity_anmeldunf_erfolgreich.xml
+++ b/app/src/main/res/layout/activity_anmeldunf_erfolgreich.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/include22"
-        layout="@layout/toolbar_2" />
+        layout="@layout/toolbar_bottom" />
 
     <TextView
         android:id="@+id/textView65"
