--- a/app/src/main/res/layout/activity_einstellungen.xml
+++ b/app/src/main/res/layout/activity_einstellungen.xml
@@ -10,7 +10,7 @@
 
     <include
         android:id="@+id/include3"
-        layout="@layout/toolbar_2"
+        layout="@layout/toolbar_bottom"
         tools:layout_editor_absoluteX="30dp"
         tools:layout_editor_absoluteY="0dp" />
 
