--- a/app/src/main/res/layout/activiry_registrierung_2.xml
+++ b/app/src/main/res/layout/activiry_registrierung_2.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/include5"
-        layout="@layout/toolbar_2" />
+        layout="@layout/toolbar_bottom" />
     <TextView
         android:id="@+id/textView61"
         android:layout_width="325dp"
