--- a/app/src/main/res/layout/activity_kontact_formular.xml
+++ b/app/src/main/res/layout/activity_kontact_formular.xml
@@ -9,8 +9,8 @@
     <include layout="@layout/toolbar_1" />
 
     <include
-        android:id="@+id/include17"
-        layout="@layout/toolbar_2" />
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_bottom" />
 
     <LinearLayout
         android:layout_width="match_parent"
