--- a/app/src/main/res/layout/activity_kontakte.xml
+++ b/app/src/main/res/layout/activity_kontakte.xml
@@ -11,8 +11,8 @@
         layout="@layout/toolbar_1" />
 
     <include
-        android:id="@+id/include11"
-        layout="@layout/toolbar_2" />
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_bottom" />
 
     <LinearLayout
         android:id="@+id/head"
