--- a/app/src/main/res/layout/activity_startseite.xml
+++ b/app/src/main/res/layout/activity_startseite.xml
@@ -9,8 +9,8 @@
     <include layout="@layout/toolbar_1" />
 
     <include
-        android:id="@+id/include20"
-        layout="@layout/toolbar_2" />
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_bottom" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include20">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <Button
             android:id="@+id/button9"
