--- a/app/src/main/res/layout/activity_tagesbuch.xml
+++ b/app/src/main/res/layout/activity_tagesbuch.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/include12"
-        layout="@layout/toolbar_2" />
+        layout="@layout/toolbar_bottom" />
 
     <LinearLayout
         android:layout_width="405dp"
