--- a/app/src/main/res/layout/activity_tagesziel_1.xml
+++ b/app/src/main/res/layout/activity_tagesziel_1.xml
@@ -11,7 +11,7 @@
 
     <include
         android:id="@+id/include2"
-        layout="@layout/toolbar_2" />
+        layout="@layout/toolbar_bottom" />
 
     <LinearLayout
         android:layout_width="368dp"
