--- a/app/src/main/res/layout/activity_tagesziel_2.xml
+++ b/app/src/main/res/layout/activity_tagesziel_2.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/include4"
-        layout="@layout/toolbar_2" />
+        layout="@layout/toolbar_bottom" />
 
     <LinearLayout
         android:layout_width="332dp"
