--- a/app/src/main/res/layout/activity_ubungen_3.xml
+++ b/app/src/main/res/layout/activity_ubungen_3.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/include14"
-        layout="@layout/toolbar_2" />
+        layout="@layout/toolbar_bottom" />
 
     <TextView
         android:id="@+id/textView73"
