--- a/app/src/main/res/layout/activity_hilfe.xml
+++ b/app/src/main/res/layout/activity_hilfe.xml
@@ -15,12 +15,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="32dp"
+        android:layout_margin="40dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include18">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <TextView
             android:id="@+id/textView30"
@@ -79,8 +79,9 @@
             android:id="@+id/button11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="toKontakt"
+            android:onClick="toKontaktFormular"
             android:text="zum Kontaktformular"
+            app:backgroundTint="@color/white"
             android:textAllCaps="false" />
     </LinearLayout>
 
